bind,detail,delete

--- a/public/index.html
+++ b/public/index.html
@@ -366,6 +366,9 @@
       .tabless{
           font-family: Fira Code;
       }
+      .cursor{
+        cursor: pointer;
+      }
 
   </style>
   </head>
