--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>App</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -28,360 +29,369 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
-      .btn-arama {
-          background-color: #EF9A53;
-      }
+        .btn-arama {
+            background-color: #EF9A53;
+        }
 
-      .navbar {
-          background-color: #F2E7D5 !important;
+        .navbar {
+            background-color: #F2E7D5 !important;
 
-      }
+        }
 
-      .navbar2 {
-          background-color: #EDEDED !important;
-      }
+        .navbar2 {
+            background-color: #EDEDED !important;
+        }
 
-      /* h1{
+        /* h1{
           font-family: 'Rubik Glitch', cursive;
 
       } */
-      .kart-bg {
-          background-color: #6D9886;
-      }
+        .kart-bg {
+            background-color: #6D9886;
+        }
 
-      .kart-bg2 {
-          background-color: #393E46;
-      }
+        .kart-bg2 {
+            background-color: #393E46;
+        }
 
-      /* a{
+        /* a{
           color: #F2E7D5 !important;
       } */
 
-      /* footer */
-      footer a {
-          text-decoration: none;
-          text-decoration: none;
-      }
+        /* footer */
+        footer a {
+            text-decoration: none;
+            text-decoration: none;
+        }
 
-      .ftr {
-          margin: 0;
-          padding: 0;
-          background-color: #F2E7D5;
-
-
-          height: 110px;
-      }
-
-      .ftr-ktgr a {
-          color: black;
-
-          margin-right: 25px;
-          letter-spacing: 3px;
-      }
-
-      .ftr-social a {
-          color: black;
-          margin-right: 10px;
+        .ftr {
+            margin: 0;
+            padding: 0;
+            background-color: #F2E7D5;
 
 
-      }
+            height: 110px;
+        }
 
-      /* iletişim */
+        .ftr-ktgr a {
+            color: black;
 
-      .ileti{
-          background-color: #F2E7D5;
-      }
+            margin-right: 25px;
+            letter-spacing: 3px;
+        }
 
-      .user_bg{
-          background-color: #F2E7D5;
-      }
+        .ftr-social a {
+            color: black;
+            margin-right: 10px;
 
-      /* admin panel */
-      #adminPanel{
-          position: relative;
-      }
 
-      /* buton konum */
-      /* #yeniİşlemGirBTN{
+        }
+
+        /* iletişim */
+
+        .ileti {
+            background-color: #F2E7D5;
+        }
+
+        .user_bg {
+            background-color: #F2E7D5;
+        }
+
+        /* admin panel */
+        #adminPanel {
+            position: relative;
+        }
+
+        /* buton konum */
+        /* #yeniİşlemGirBTN{
           position: absolute;
           top: 80px;
           right: 3px;
       } */
 
-      /* islem list */
-      .islemList{
-          background-color: #f4d9ae;
-      }
+        /* islem list */
+        .islemList {
+            background-color: #f4d9ae;
+        }
 
-      .bg-baslık{
-          background-color: #f9d6b9;
-      }
+        .bg-baslık {
+            background-color: #f9d6b9;
+        }
 
-      .girilenİslemList{
-          background-color: #fbe3d0;
-      }
+        .girilenİslemList {
+            background-color: #fbe3d0;
+        }
 
-      /* CSS */
-      .button-56 {
-          align-items: center;
-          background-color: #f6c8a2;
-          border: 2px solid #111;
-          border-radius: 8px;
-          box-sizing: border-box;
-          color: #111;
-          cursor: pointer;
-          display: flex;
-          font-family: Inter,sans-serif;
-          font-size: 16px;
-          height: 48px;
-          justify-content: center;
-          line-height: 24px;
-          max-width: 100%;
-          padding: 0 25px;
-          position: relative;
-          text-align: center;
-          text-decoration: none;
-          user-select: none;
-          -webkit-user-select: none;
-          touch-action: manipulation;
-      }
+        /* CSS */
+        .button-56 {
+            align-items: center;
+            background-color: #f6c8a2;
+            border: 2px solid #111;
+            border-radius: 8px;
+            box-sizing: border-box;
+            color: #111;
+            cursor: pointer;
+            display: flex;
+            font-family: Inter, sans-serif;
+            font-size: 16px;
+            height: 48px;
+            justify-content: center;
+            line-height: 24px;
+            max-width: 100%;
+            padding: 0 25px;
+            position: relative;
+            text-align: center;
+            text-decoration: none;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
 
-      .button-56:after {
-          background-color: rgb(192, 192, 192);
-          border-radius: 8px;
-          content: "";
-          display: block;
-          height: 48px;
-          left: 0;
-          width: 100%;
-          position: absolute;
-          top: -2px;
-          transform: translate(8px, 8px);
-          transition: transform .2s ease-out;
-          z-index: -1;
-      }
+        .button-56:after {
+            background-color: rgb(192, 192, 192);
+            border-radius: 8px;
+            content: "";
+            display: block;
+            height: 48px;
+            left: 0;
+            width: 100%;
+            position: absolute;
+            top: -2px;
+            transform: translate(8px, 8px);
+            transition: transform .2s ease-out;
+            z-index: -1;
+        }
 
-      .button-56:hover:after {
-          transform: translate(0, 0);
-      }
+        .button-56:hover:after {
+            transform: translate(0, 0);
+        }
 
-      .button-56:active {
-          background-color: #ffdeda;
-          outline: 0;
-      }
+        .button-56:active {
+            background-color: #ffdeda;
+            outline: 0;
+        }
 
-      .button-56:hover {
-          outline: 0;
-      }
+        .button-56:hover {
+            outline: 0;
+        }
 
-      @media (min-width: 768px) {
-          .button-56 {
-              padding: 0 40px;
-          }
-      }
+        @media (min-width: 768px) {
+            .button-56 {
+                padding: 0 40px;
+            }
+        }
 
-      /* manuel buton */
-      
-      .button-57 {
-          align-items: center;
-          background-color: #ccffeb;
-          border: 2px solid #111;
-          border-radius: 8px;
-          box-sizing: border-box;
-          color: #111;
-          cursor: pointer;
-          display: flex;
-          font-family: Inter,sans-serif;
-          font-size: 16px;
-          height: 48px;
-          justify-content: center;
-          line-height: 24px;
-          max-width: 100%;
-          padding: 0 25px;
-          position: relative;
-          text-align: center;
-          text-decoration: none;
-          user-select: none;
-          -webkit-user-select: none;
-          touch-action: manipulation;
-      }
+        /* manuel buton */
 
-      .button-57:after {
-          background-color: rgb(192, 192, 192);
-          border-radius: 8px;
-          content: "";
-          display: block;
-          height: 48px;
-          left: 0;
-          width: 100%;
-          position: absolute;
-          top: -2px;
-          transform: translate(8px, 8px);
-          transition: transform .2s ease-out;
-          z-index: -1;
-      }
+        .button-57 {
+            align-items: center;
+            background-color: #ccffeb;
+            border: 2px solid #111;
+            border-radius: 8px;
+            box-sizing: border-box;
+            color: #111;
+            cursor: pointer;
+            display: flex;
+            font-family: Inter, sans-serif;
+            font-size: 16px;
+            height: 48px;
+            justify-content: center;
+            line-height: 24px;
+            max-width: 100%;
+            padding: 0 25px;
+            position: relative;
+            text-align: center;
+            text-decoration: none;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
 
-      .button-57:hover:after {
-          transform: translate(0, 0);
-      }
+        .button-57:after {
+            background-color: rgb(192, 192, 192);
+            border-radius: 8px;
+            content: "";
+            display: block;
+            height: 48px;
+            left: 0;
+            width: 100%;
+            position: absolute;
+            top: -2px;
+            transform: translate(8px, 8px);
+            transition: transform .2s ease-out;
+            z-index: -1;
+        }
 
-      .button-57:active {
-          background-color: #ffdeda;
-          outline: 0;
-      }
+        .button-57:hover:after {
+            transform: translate(0, 0);
+        }
 
-      .button-57:hover {
-          outline: 0;
-      }
+        .button-57:active {
+            background-color: #ffdeda;
+            outline: 0;
+        }
 
-      @media (min-width: 768px) {
-          .button-57 {
-              padding: 0 40px;
-          }
-      }
+        .button-57:hover {
+            outline: 0;
+        }
 
-      #barkod{
-          width: 50px;
-      }
+        @media (min-width: 768px) {
+            .button-57 {
+                padding: 0 40px;
+            }
+        }
 
-      /* .dropdown-toggle::after{
+        #barkod {
+            width: 50px;
+        }
+
+        /* .dropdown-toggle::after{
           display: none;
       } */
 
-      /* checked */
-      .checkbox-wrapper-24 .checkbox {
-          display: table-cell;
-          width: 100%;
-          height: 100%;
-          vertical-align: middle;
-          text-align: center;
-      }
+        /* checked */
+        .checkbox-wrapper-24 .checkbox {
+            display: table-cell;
+            width: 100%;
+            height: 100%;
+            vertical-align: middle;
+            text-align: center;
+        }
 
-      .checkbox-wrapper-24 label {
-          display: inline-block;
-          color: #333;
-          cursor: pointer;
-          position: relative;
-      }
+        .checkbox-wrapper-24 label {
+            display: inline-block;
+            color: #333;
+            cursor: pointer;
+            position: relative;
+        }
 
-      .checkbox-wrapper-24 label span {
-          display: inline-block;
-          position: relative;
-          background-color: transparent;
-          width: 25px;
-          height: 25px;
-          transform-origin: center;
-          border: 2px solid rgb(165, 165, 165);
-          border-radius: 50%;
-          vertical-align: middle;
-          margin-right: 10px;
-          transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
-      }
+        .checkbox-wrapper-24 label span {
+            display: inline-block;
+            position: relative;
+            background-color: transparent;
+            width: 25px;
+            height: 25px;
+            transform-origin: center;
+            border: 2px solid rgb(165, 165, 165);
+            border-radius: 50%;
+            vertical-align: middle;
+            margin-right: 10px;
+            transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
+        }
 
-      .checkbox-wrapper-24 label span:before {
-          content: "";
-          width: 0px;
-          height: 2px;
-          border-radius: 2px;
-          background: #333;
-          position: absolute;
-          transform: rotate(45deg);
-          top: 13px;
-          left: 9px;
-          transition: width 50ms ease 50ms;
-          transform-origin: 0% 0%;
-      }
+        .checkbox-wrapper-24 label span:before {
+            content: "";
+            width: 0px;
+            height: 2px;
+            border-radius: 2px;
+            background: #333;
+            position: absolute;
+            transform: rotate(45deg);
+            top: 13px;
+            left: 9px;
+            transition: width 50ms ease 50ms;
+            transform-origin: 0% 0%;
+        }
 
-      .checkbox-wrapper-24 label span:after {
-          content: "";
-          width: 0;
-          height: 2px;
-          border-radius: 2px;
-          background: #333;
-          position: absolute;
-          transform: rotate(305deg);
-          top: 16px;
-          left: 10px;
-          transition: width 50ms ease;
-          transform-origin: 0% 0%;
-      }
+        .checkbox-wrapper-24 label span:after {
+            content: "";
+            width: 0;
+            height: 2px;
+            border-radius: 2px;
+            background: #333;
+            position: absolute;
+            transform: rotate(305deg);
+            top: 16px;
+            left: 10px;
+            transition: width 50ms ease;
+            transform-origin: 0% 0%;
+        }
 
-      .checkbox-wrapper-24 label:hover span:before {
-          width: 5px;
-          transition: width 100ms ease;
-      }
+        .checkbox-wrapper-24 label:hover span:before {
+            width: 5px;
+            transition: width 100ms ease;
+        }
 
-      .checkbox-wrapper-24 label:hover span:after {
-          width: 10px;
-          transition: width 150ms ease 100ms;
-      }
+        .checkbox-wrapper-24 label:hover span:after {
+            width: 10px;
+            transition: width 150ms ease 100ms;
+        }
 
-      .checkbox-wrapper-24 input[type=checkbox] {
-          display: none;
-      }
+        .checkbox-wrapper-24 input[type=checkbox] {
+            display: none;
+        }
 
-      .checkbox-wrapper-24 input[type=checkbox]:checked+label span {
-          background-color: #EF9A53;
-          transform: scale(1.25);
-      }
+        .checkbox-wrapper-24 input[type=checkbox]:checked+label span {
+            background-color: #EF9A53;
+            transform: scale(1.25);
+        }
 
-      .checkbox-wrapper-24 input[type=checkbox]:checked+label span:after {
-          width: 10px;
-          background: #fff;
-          transition: width 150ms ease 100ms;
-      }
+        .checkbox-wrapper-24 input[type=checkbox]:checked+label span:after {
+            width: 10px;
+            background: #fff;
+            transition: width 150ms ease 100ms;
+        }
 
-      .checkbox-wrapper-24 input[type=checkbox]:checked+label span:before {
-          width: 5px;
-          background: #fff;
-          transition: width 150ms ease 100ms;
-      }
+        .checkbox-wrapper-24 input[type=checkbox]:checked+label span:before {
+            width: 5px;
+            background: #fff;
+            transition: width 150ms ease 100ms;
+        }
 
-      .checkbox-wrapper-24 input[type=checkbox]:checked+label:hover span {
-          background-color: #EF9A53;
-          transform: scale(1.25);
-      }
+        .checkbox-wrapper-24 input[type=checkbox]:checked+label:hover span {
+            background-color: #EF9A53;
+            transform: scale(1.25);
+        }
 
-      .checkbox-wrapper-24 input[type=checkbox]:checked+label:hover span:after {
-          width: 10px;
-          background: #fff;
-          transition: width 150ms ease 100ms;
-      }
+        .checkbox-wrapper-24 input[type=checkbox]:checked+label:hover span:after {
+            width: 10px;
+            background: #fff;
+            transition: width 150ms ease 100ms;
+        }
 
-      .checkbox-wrapper-24 input[type=checkbox]:checked+label:hover span:before {
-          width: 5px;
-          background: #fff;
-          transition: width 150ms ease 100ms;
-      }
+        .checkbox-wrapper-24 input[type=checkbox]:checked+label:hover span:before {
+            width: 5px;
+            background: #fff;
+            transition: width 150ms ease 100ms;
+        }
 
-      .ekle{
-          margin-right: 121px;
-          margin-bottom: 20px;
-      }
+        .ekle {
+            margin-right: 121px;
+            margin-bottom: 20px;
+        }
 
-      .tabless{
-          font-family: Fira Code;
-      }
-      .cursor{
-        cursor: pointer;
-      }
+        .tabless {
+            font-family: Fira Code;
+        }
 
-  </style>
-  </head>
-  <body>
+        .cursor {
+            cursor: pointer;
+        }
+
+        .center {
+            position: relative;
+            top: 250px;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
         </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
         </script>
-  </body>
+</body>
+
 </html>
